--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
   },
   "dependencies": {
     "@xstate/react": "^3.0.1",
-    "next": "12.2.0",
+    "immer": "^9.0.17",
+    "next": "^13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "xstate": "^4.33.6"
+    "xstate": "^4.33.6",
+    "zod": "^3.20.2",
+    "zustand": "^4.2.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.2",
@@ -36,6 +39,7 @@
     "eslint-plugin-testing-library": "^5.0.5",
     "jest": "^28.1.2",
     "prettier": "^2.5.1",
+    "simple-zustand-devtools": "^1.1.0",
     "ts-jest": "^28.0.5",
     "typescript": "4.7.4"
   }
