--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "check-all": "yarn lint && yarn type-check && yarn test --watchAll=false"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.10",
     "@xstate/react": "^3.0.1",
     "immer": "^9.0.17",
     "next": "^13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.41.5",
     "xstate": "^4.33.6",
     "zod": "^3.20.2",
     "zustand": "^4.2.0"
