--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,17 +19,24 @@
   "vsicons.associations.files": [
     {
       "icon": "tsconfig",
-      "extensions": ["tsconfig.build.json", "tsconfig.paths.json"],
+      "extensions": [
+        "tsconfig.build.json",
+        "tsconfig.paths.json"
+      ],
       "filename": true
     },
     {
       "icon": "todo",
-      "extensions": ["TODO.md"],
+      "extensions": [
+        "TODO.md"
+      ],
       "filename": true
     },
     {
       "icon": "docker",
-      "extensions": ["docker-compose.build.yml"],
+      "extensions": [
+        "docker-compose.build.yml"
+      ],
       "filename": true
     }
   ]
