--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.41.5",
+    "react-json-view": "^1.21.3",
     "xstate": "^4.33.6",
     "zod": "^3.20.2",
     "zustand": "^4.2.0"
@@ -38,7 +39,6 @@
     "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-jest-dom": "^4.0.3",
     "eslint-plugin-json": "^3.1.0",
-
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-testing-library": "^5.9.1",
     "jest": "^29.3.1",
