--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,27 +16,24 @@
   "files.associations": {
     ".env*": "dotenv"
   },
+  "workbench.colorCustomizations": {
+    "statusBar.background": "#FBD38D",
+    "statusBar.foreground": "#2D3748"
+  },
   "vsicons.associations.files": [
     {
       "icon": "tsconfig",
-      "extensions": [
-        "tsconfig.build.json",
-        "tsconfig.paths.json"
-      ],
+      "extensions": ["tsconfig.build.json", "tsconfig.paths.json"],
       "filename": true
     },
     {
       "icon": "todo",
-      "extensions": [
-        "TODO.md"
-      ],
+      "extensions": ["TODO.md"],
       "filename": true
     },
     {
       "icon": "docker",
-      "extensions": [
-        "docker-compose.build.yml"
-      ],
+      "extensions": ["docker-compose.build.yml"],
       "filename": true
     }
   ]
