--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
+    "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.2.5",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
@@ -41,7 +41,8 @@
     "eslint-plugin-json": "^3.1.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-testing-library": "^5.9.1",
-    "jest": "^29.3.1",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "prettier": "^2.8.3",
     "simple-zustand-devtools": "^1.1.0",
     "ts-jest": "^29.0.5",
